--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
-master_doc.pdf
+Rapport/master_doc.pdf
+
+Rapport/.texpadtmp/master_doc.toc
+Rapport/.texpadtmp/master_doc.synctex.gz
+Rapport/.texpadtmp/master_doc.toc.out
+Rapport/.texpadtmp/master_doc.toc.log
+Rapport/.texpadtmp/master_doc.toc.aux
