--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ Rapport/.texpadtmp/master_doc.synctex.gz
 Rapport/.texpadtmp/master_doc.toc.out
 Rapport/.texpadtmp/master_doc.toc.log
 Rapport/.texpadtmp/master_doc.toc.aux
+Rapport/.texpadtmp/master_doc.log
+Rapport/.texpadtmp/master_doc.synctex.gz
+Rapport/master_doc.pdf
