Fjernet texpad temp filer. Flyttet guides til irc og ssh væk fra rapporten.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ Rapport/.texpadtmp/master_doc.toc.aux
 Rapport/.texpadtmp/master_doc.log
 Rapport/.texpadtmp/master_doc.synctex.gz
 Rapport/master_doc.pdf
+.texpadtmp
+.texpadtmp
