added TeXWorks files to gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,14 @@ Rapport/master_doc.pdf
 .texpadtmp
 IEEE rapport/IEEE master/IEEE_master.pdf
 Mikael_Anders/forsøg_mikael_anders.pdf
+/Rapport/master_doc.aux
+/Rapport/master_doc.bbl
+/Rapport/master_doc.blg
+/Rapport/master_doc.lof
+/Rapport/master_doc.log
+/Rapport/master_doc.lot
+/Rapport/master_doc.out
+/Rapport/master_doc.pdf
+/Rapport/master_doc.synctex.gz
+/Rapport/master_doc.toc
+/Rapport/content/app_DCmotor.log
