--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ Mikael_Anders/forsøg_mikael_anders.pdf
 /Rapport/master_doc.synctex.gz
 /Rapport/master_doc.toc
 /Rapport/content/app_DCmotor.log
+/Rapport/graphics/induktans0-eps-converted-to.pdf
+/Rapport/graphics/resistans1-eps-converted-to.pdf
