Eksperiment 2 tekst og figur

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ Mikael_Anders/forsøg_mikael_anders.pdf
 /Rapport/content/app_DCmotor.log
 /Rapport/graphics/induktans0-eps-converted-to.pdf
 /Rapport/graphics/resistans1-eps-converted-to.pdf
+/Rapport/graphics/induktans1-eps-converted-to.pdf
