--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ Mikael_Anders/forsøg_mikael_anders.pdf
 /Rapport/graphics/induktans0-eps-converted-to.pdf
 /Rapport/graphics/resistans1-eps-converted-to.pdf
 /Rapport/graphics/induktans1-eps-converted-to.pdf
+/Rapport/graphics/vemf0-eps-converted-to.pdf
+/Rapport/graphics/vemf1-eps-converted-to.pdf
