Fixet todos + gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@ Mikael_Anders/forsøg_mikael_anders.pdf
 /Rapport/graphics/induktans1-eps-converted-to.pdf
 /Rapport/graphics/vemf0-eps-converted-to.pdf
 /Rapport/graphics/vemf1-eps-converted-to.pdf
+Rapport/content/preamble.log
+Rapport/content/ .aux
+Rapport/content/problemformulering.log
