--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,6 @@ Mikael_Anders/forsøg_mikael_anders.pdf
 Rapport/content/preamble.log
 Rapport/content/ .aux
 Rapport/content/problemformulering.log
+Rapport/content/*.aux
+Rapport/content/FPGA.log
+Rapport/graphics/FPGA_blok.log
