--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ Rapport/content/PTS.log
 Rapport/master_doc.tdo
 *.gz(busy)
 Rapport/content/forord.log
+/Rapport/graphics/induktans2-eps-converted-to.pdf
