--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ Rapport/master_doc.tdo
 *.gz(busy)
 Rapport/content/forord.log
 /Rapport/graphics/induktans2-eps-converted-to.pdf
+Rapport/graphics/hall_sensor_signal.log
