Finished the figure with a little help, from Anders

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ Rapport/master_doc.tdo
 Rapport/content/forord.log
 /Rapport/graphics/induktans2-eps-converted-to.pdf
 Rapport/graphics/hall_sensor_signal.log
+Rapport/graphics/designproces.log
