rettelser ud fra anders' feedback

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ Rapport/content/forord.log
 /Rapport/graphics/induktans2-eps-converted-to.pdf
 Rapport/graphics/hall_sensor_signal.log
 Rapport/graphics/designproces.log
+Rapport/content/Mikrocontroller.log
