--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ Rapport/content/forord.log
 /Rapport/graphics/induktans2-eps-converted-to.pdf
 Rapport/graphics/hall_sensor_signal.log
 Rapport/graphics/designproces.log
+/Rapport/graphics/diskretBode-eps-converted-to.pdf
+/Rapport/graphics/diskretStepFreq-eps-converted-to.pdf
+/Rapport/graphics/diskretTiltStep-eps-converted-to.pdf
