--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ Rapport/graphics/designproces.log
 /Rapport/graphics/diskretStepFreq-eps-converted-to.pdf
 /Rapport/graphics/diskretTiltStep-eps-converted-to.pdf
 Rapport/content/Mikrocontroller.log
+Rapport/master_doc.dvi
