added matlab open loop data

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ Rapport/graphics/designproces.log
 /Rapport/graphics/diskretTiltStep-eps-converted-to.pdf
 Rapport/content/Mikrocontroller.log
 Rapport/master_doc.dvi
+/Rapport/graphics/openloop2-eps-converted-to.pdf
