--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@ Rapport/graphics/designproces.log
 Rapport/content/Mikrocontroller.log
 Rapport/master_doc.dvi
 /Rapport/graphics/openloop2-eps-converted-to.pdf
+/Rapport/graphics/openloop3-eps-converted-to.pdf
