--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,5 @@ Rapport/content/Mikrocontroller.log
 Rapport/master_doc.dvi
 /Rapport/graphics/openloop2-eps-converted-to.pdf
 /Rapport/graphics/openloop3-eps-converted-to.pdf
+Rapport/graphics/error_pan-eps-converted-to.pdf
+Rapport/graphics/error_tilt-eps-converted-to.pdf
