--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ Rapport/master_doc.dvi
 /Rapport/graphics/openloop3-eps-converted-to.pdf
 Rapport/graphics/error_pan-eps-converted-to.pdf
 Rapport/graphics/error_tilt-eps-converted-to.pdf
+Rapport/content/kontrollerdesign.log
