open loop velocity

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@ Rapport/master_doc.dvi
 Rapport/graphics/error_pan-eps-converted-to.pdf
 Rapport/graphics/error_tilt-eps-converted-to.pdf
 Rapport/content/kontrollerdesign.log
+/Rapport/graphics/openloopVelocity1-eps-converted-to.pdf
