--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ Rapport/graphics/error_pan-eps-converted-to.pdf
 Rapport/graphics/error_tilt-eps-converted-to.pdf
 Rapport/content/kontrollerdesign.log
 /Rapport/graphics/openloopVelocity1-eps-converted-to.pdf
+*.sty
