--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@ Rapport/graphics/error_tilt-eps-converted-to.pdf
 Rapport/content/kontrollerdesign.log
 /Rapport/graphics/openloopVelocity1-eps-converted-to.pdf
 *.sty
+Rapport/content/PID_optimering.log
