--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,5 @@ Rapport/content/kontrollerdesign.log
 /Rapport/graphics/openloopVelocity1-eps-converted-to.pdf
 *.sty
 Rapport/content/PID_optimering.log
+/Rapport/graphics/pidPhys1-eps-converted-to.pdf
+/Rapport/graphics/pidSim1-eps-converted-to.pdf
