--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ Rapport/content/kontrollerdesign.log
 Rapport/content/PID_optimering.log
 /Rapport/graphics/pidPhys1-eps-converted-to.pdf
 /Rapport/graphics/pidSim1-eps-converted-to.pdf
+/Rapport/graphics/pidPhys2-eps-converted-to.pdf
