de konvertereded pdf'er skal ikke gittes

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,5 @@ Rapport/content/PID_optimering.log
 /Rapport/graphics/pidPhys1-eps-converted-to.pdf
 /Rapport/graphics/pidSim1-eps-converted-to.pdf
 /Rapport/graphics/pidPhys2-eps-converted-to.pdf
+/Rapport/graphics/d-filter-bode-small-eps-converted-to.pdf
+/Rapport/graphics/d-filter-step-small-eps-converted-to.pdf
