--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,11 @@ Rapport/content/PID_optimering.log
 /Rapport/graphics/pidPhys2-eps-converted-to.pdf
 /Rapport/graphics/d-filter-bode-small-eps-converted-to.pdf
 /Rapport/graphics/d-filter-step-small-eps-converted-to.pdf
+Rapport/graphics/d-filter-bode-small4-eps-converted-to.pdf
+Rapport/graphics/d-filter-step-small3.eps
+Rapport/graphics/d-filter-bode-small2-eps-converted-to.pdf
+Rapport/graphics/d-filter-bode-small2.eps
+Rapport/graphics/d-filter-step-small2.eps
+Rapport/graphics/d-filter-step-small2-eps-converted-to.pdf
+Rapport/graphics/d-filter-step-small3-eps-converted-to.pdf
+Rapport/graphics/d-filter-step-small4-eps-converted-to.pdf
